--- a/index.html
+++ b/index.html
@@ -1,8 +1,100 @@
 <!DOCTYPE html>
-<html>
-   <head>
-   </head>
-   <body>
-      <!-- Write your HTML in this file! -->
-   </body>
+<html lang="en">
+  <head>
+    <title>How To Build A Retaining Wall System</title>
+    <header>
+      <h1>How To Build A Retaining Wall System</h1>
+    </header>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <style>
+      .article-container {
+        max-width: 1000Spx;
+        margin: 0 auto;
+        padding: 20px;
+        border: 2px solid #ccc;
+        border-radius: 10px;
+      }
+    </style>
+  </head>
+  <body>
+    <img
+      src="https://www.premierewalls.com/-_-/res/9eb7c59b-3ade-4a3d-8e30-d08b4ac0b480/images/files/9eb7c59b-3ade-4a3d-8e30-d08b4ac0b480/3e419b3a-6df3-4e1f-b596-8c16d1fd1341/600-400/45fed74a8af3f15e6df90f785eb1a7f3e4428d50"
+      alt="Garden Wall"
+    />
+    <img
+      src="https://www.premierewalls.com/-_-/res/9eb7c59b-3ade-4a3d-8e30-d08b4ac0b480/images/assets/e3b52696-1e92-4b6b-bad5-ce3485895123/480-318/04ea96014677610ae2f5c74464757102e74b9fb6"
+      alt="Garden Wall 2"
+    />
+    <img
+      src="https://www.premierewalls.com/-_-/res/9eb7c59b-3ade-4a3d-8e30-d08b4ac0b480/images/assets/8bc4b3a3-9d63-4c39-8338-56843fb46b1d/240-159/56017a2a37007e3c2d3792657b693b7ce5237c7f"
+      alt="Retaining Wall"
+    />
+    <article>
+      <article class="article-container">
+        <h2>Materials</h2>
+        <h4><b>Block Types:</b></h4>
+        <p>Garden wall, Retaining wall, Cap Stone</p>
+        <h4><b>Fill:</b></h4>
+        <p>1 Inch Clean, Top Soil, Decretive Rock, Mulch</p>
+        <h4><b>Fabric:</b></h4>
+        <p>Filter Fabric, Weed Barrier</p>
+        <h4><b>Adhesive:</b></h4>
+        <p>LP 300 Landscape Adhesive</p>
+      </article>
+    </article>
+    <main>
+      <h3>1.Design</h3>
+      <p>
+        People build retaining walls for a variety of different reasons. The
+        first and probably most important reason for building a retaining wall
+        in you yard is to combat negative slope towards your homes foundation.
+        The second reason is to hide foundation walls that otherwise would be
+        exposed. The third reason someone would build a retaining wall system is
+        a raised garden bed. It is important to think about what you want you
+        retaining wall to do when choosing the shape size or color of your wall.
+        There are many different variations of size and color block that you can
+        choose from. The most common block size is 12x18x6. It give you a strong
+        foot print to insure your retaining wall system will not move.
+      </p>
+      <h3>2.Base</h3>
+      <p>
+        The first step in building a retaining wall system is to dig a trench
+        big enough and deep enough for you your materials to be encapsulated.
+        standard convention is to dig a 12x12 trench for the total length of
+        your wall. Once the Trench is dug you can begin to fill the trench with
+        a strong base material like inch minus or 1 inch clean crushed crock.
+        The next step is to compact the rock down so that it will not move after
+        this step it is time to start setting blocks into the rock base.
+      </p>
+      <h3>3.Stacking</h3>
+      <p>
+        After you have laid a sturdy and level base you can begin stacking
+        blocks on top of your base blocks. It is important to start your next
+        course on top of the center of two base blocks. Once your course is set
+        you need to secure them down with a interlocking pin system. At this
+        point your retaining wall system should be taking shape and ready to
+        fill.
+      </p>
+      <h3>4.Back Fill</h3>
+      <p>
+        Now that your wall is stacked to height you can begin the back filling
+        process. This is where you will take raw materials like dirt or rock and
+        fill the empty space behind the block. this step will be the body of
+        your project. If you are planing to have a strong structure to walk or
+        drive on top of it is a good idea to fill with rock. If you are using
+        the retaining wall system as a raised garden bed you can just use top
+        soil for planting soil.
+      </p>
+      <h3>Cap</h3>
+      <p>
+        Cap is the final step in building a good retaining wall system. Cap is a
+        slightly smaller version of the block you used to base and stack your
+        wall that has a smooth top. It is used to cover any gaps or holes from
+        the top of the wall giving it a polished finishing look. The cap are
+        installed by a flush cut method and then glued in place on top of your
+        stacking blocks.
+      </p>
+    </main>
+    <footer>&copy; published 08/8/2024</footer>
+  </body>
 </html>
