git commit "task 2"

--- a/index.html
+++ b/index.html
@@ -3,18 +3,9 @@
   <head>
     <title>How To Build A Retaining Wall System</title>
     <header>
-      <h1>How To Build A Retaining Wall System</h1>
+      <h1 id="mainHeading">How To Build A Retaining Wall System</h1>
     </header>
     <link rel="stylesheet" type="text/css" href="styles.css" />
-    <style>
-      .article-container {
-        max-width: 1000Spx;
-        margin: 0 auto;
-        padding: 20px;
-        border: 2px solid #ccc;
-        border-radius: 10px;
-      }
-    </style>
   </head>
   <body>
     <img
@@ -44,7 +35,7 @@
     </article>
     <main>
       <h3>1.Design</h3>
-      <p>
+      <p id="testP" class="funParagraph">
         People build retaining walls for a variety of different reasons. The
         first and probably most important reason for building a retaining wall
         in you yard is to combat negative slope towards your homes foundation.
