git comit css changes

--- a/index.html
+++ b/index.html
@@ -8,18 +8,24 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
+    <div class="image-container">
     <img
       src="https://www.premierewalls.com/-_-/res/9eb7c59b-3ade-4a3d-8e30-d08b4ac0b480/images/files/9eb7c59b-3ade-4a3d-8e30-d08b4ac0b480/3e419b3a-6df3-4e1f-b596-8c16d1fd1341/600-400/45fed74a8af3f15e6df90f785eb1a7f3e4428d50"
       alt="Garden Wall"
-    />
-    <img
+    /> 
+  </div>
+    <div class="image-container">
+      <img
       src="https://www.premierewalls.com/-_-/res/9eb7c59b-3ade-4a3d-8e30-d08b4ac0b480/images/assets/e3b52696-1e92-4b6b-bad5-ce3485895123/480-318/04ea96014677610ae2f5c74464757102e74b9fb6"
       alt="Garden Wall 2"
     />
+    </div>
+    <div class="image-container">
     <img
       src="https://www.premierewalls.com/-_-/res/9eb7c59b-3ade-4a3d-8e30-d08b4ac0b480/images/assets/8bc4b3a3-9d63-4c39-8338-56843fb46b1d/240-159/56017a2a37007e3c2d3792657b693b7ce5237c7f"
       alt="Retaining Wall"
     />
+    </div>
     <article>
       <article class="article-container">
         <h2>Materials</h2>
